# maxed-cli

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: close-checklist.example.json  example.workpaper.json  workspace.yaml
src/maxed_cli/: __init__.py  cli.py  config.py  scaffold.py  suite.py  workpaper.py
src/maxed_cli/connectors/: __init__.py  base.py  mock.py  registry.py
src/maxed_cli/schemas/: __init__.py  config.schema.json  workpaper.schema.json
tests/: test_cli.py  test_config.py  test_connectors.py  test_suite_and_json.py  test_workpaper.py
