[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "maxed-cli"
version = "0.1.0"
description = "Developer/operator on-ramp CLI for an accounting-tech stack: scaffold a firm dev workspace, validate config, lint workpaper specs, and smoke-test sandbox connectors."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [{ name = "maxed-cli contributors" }]
keywords = ["accounting", "cli", "scaffold", "workpaper", "developer-tools"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Build Tools",
  "Topic :: Office/Business :: Financial :: Accounting",
]
dependencies = [
  "typer>=0.12,<1.0",
  "pyyaml>=6.0",
  "jsonschema>=4.18",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
]

[project.urls]
Homepage = "https://github.com/maxed-oss/maxed-cli"
Source = "https://github.com/maxed-oss/maxed-cli"
Issues = "https://github.com/maxed-oss/maxed-cli/issues"

[project.scripts]
maxed = "maxed_cli.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/maxed_cli"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
